Removed redundant form tag and spam prevention

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -8,7 +8,7 @@
 <p>Enter message to be displayed on Caleb's wall</p>
 <form id="display" action="/stranger/display" method="POST"
       onsubmit="this.submit(); this.reset(); return false;">
-    <textarea form="display" id="msg" name="message" rows="3" cols="40" maxlength="50"></textarea><br>
+    <textarea name="message" rows="3" cols="40" maxlength="50"></textarea><br>
     <input type="submit" value="submit">
 </form>
 <br>
